--- a/tailwind.css
+++ b/tailwind.css
@@ -8,6 +8,10 @@
   }
 }
 
+* {
+    outline: 2px solid red;
+}
+
 @layer utilities {
   .text-gradient {
     @apply text-transparent bg-clip-text bg-gradient-to-r from-blue-600 to-sky-500 max-w-max;
